<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medicamentos.DetalleMedicamentoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/lblNombreMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblNombreComercialMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/nombre_comercial"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/lblVia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/via_de_administracion"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblViaMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/via_de_administracion"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/lblProposito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/proposito_o_finalidad"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblPropositoMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/proposito_o_finalidad"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/lblAdvertencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/advertencias"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblAdvertenciaMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/advertencias"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>