<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formulas.InfusionesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtFormulaInfusiones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/formula_infusiones"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCalcularInfusiones" />

            <TextView
                android:id="@+id/lblV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/v"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/lblDescV"
                app:layout_constraintStart_toStartOf="@+id/lblDescV"
                app:layout_constraintTop_toBottomOf="@+id/txtVAI" />

            <TextView
                android:id="@+id/lblDescH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/horas"
                app:layout_constraintEnd_toEndOf="@+id/txtH"
                app:layout_constraintStart_toStartOf="@+id/txtH"
                app:layout_constraintTop_toBottomOf="@+id/lblH" />

            <TextView
                android:id="@+id/lblVAI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/vai"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/lblDescVAI"
                app:layout_constraintStart_toStartOf="@+id/lblDescVAI"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblDescVAI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/volumen_a_infundir"
                app:layout_constraintEnd_toEndOf="@+id/txtVAI"
                app:layout_constraintStart_toStartOf="@+id/txtVAI"
                app:layout_constraintTop_toBottomOf="@+id/lblVAI" />

            <EditText
                android:id="@+id/txtVAI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="60dp"
                android:autofillHints=""
                android:background="@drawable/estilo_secciones"
                android:ems="16"
                android:inputType="numberDecimal"
                android:maxLength="50"
                android:padding="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblDescVAI"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/lblDescV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/velocidad_de_infusion"
                app:layout_constraintEnd_toEndOf="@+id/txtV"
                app:layout_constraintStart_toStartOf="@+id/txtV"
                app:layout_constraintTop_toBottomOf="@+id/lblV" />

            <EditText
                android:id="@+id/txtV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="60dp"
                android:autofillHints=""
                android:background="@drawable/estilo_secciones"
                android:ems="16"
                android:inputType="numberDecimal"
                android:maxLength="50"
                android:padding="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblDescV"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txtH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="60dp"
                android:autofillHints=""
                android:background="@drawable/estilo_secciones"
                android:ems="16"
                android:inputType="numberDecimal"
                android:maxLength="50"
                android:padding="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblDescH"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/lblH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/h"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/lblDescH"
                app:layout_constraintStart_toStartOf="@+id/lblDescH"
                app:layout_constraintTop_toBottomOf="@+id/txtV" />

            <Button
                android:id="@+id/btnCalcularInfusiones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/calcular"
                app:layout_constraintEnd_toEndOf="@+id/txtH"
                app:layout_constraintStart_toStartOf="@+id/txtH"
                app:layout_constraintTop_toBottomOf="@+id/txtH"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>